# EasyConvert

./: .gitignore  LICENSE.md  QUICKSTART.md  README.md  SETUP.md  index.html  package-lock.json  package.json  run.bat  vite.config.ts
scripts/: download-binaries.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs
src-tauri/src/converters/: archive.rs  document.rs  image.rs  mod.rs  traits.rs  video.rs
src-tauri/src/models/: conversion.rs  format.rs  mod.rs
src-tauri/src/router/: format_router.rs  mod.rs
src-tauri/src/utils/: error.rs  mod.rs  sidecar.rs
src/components/: BulkActions.tsx  FileDropZone.tsx  FileList.tsx  FormatIcon.tsx  FormatSelector.tsx  QualitySlider.tsx  ThemeToggle.tsx
src/hooks/: useConversion.ts  useFileUpload.ts  useKeyboardShortcuts.ts  useTheme.ts
src/types/: conversion.ts  file.ts
src/utils/: formatHelpers.ts
