[package]
name = "easyconvert"
version = "0.1.0"
description = "Cross-platform file converter"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

[lib]
name = "easyconvert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
